# eusef-aprs-tui

./: .gitignore  LICENSE  README.md  ble_monitor.py  bt_monitor.py  config.toml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  start-bt-bridge.sh  start.sh  wizard.py  wizard.sh
.claude/: settings.local.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
aprs_tui/: __main__.py  app.py  config.py
aprs_tui/core/: __init__.py  beacon.py  chat_store.py  connection.py  dedup.py  direwolf.py  message_tracker.py  packet_bus.py  station_tracker.py
aprs_tui/discovery/: mdns.py
aprs_tui/map/: __init__.py  auto_zoom.py  braille_canvas.py  downloader.py  filters.py  fullscreen.py  panel.py  registry.py  renderer.py  station_overlay.py  styles.py  tile_math.py  tile_source.py  track_renderer.py  vector_renderer.py
aprs_tui/protocol/: __init__.py  ax25.py  decoder.py  encoder.py  kiss.py  types.py
aprs_tui/transport/: __init__.py  aprs_is.py  base.py  kiss_ble.py  kiss_bt.py  kiss_serial.py  kiss_tcp.py
aprs_tui/ui/: about_screen.py  chat_screen.py  command_screen.py  footer.py  jump_to_screen.py  key_reference.py  mini_map.py  (+6 more)
docs/: ARCHITECTURE-FEEDBACK-R1.md  TEST_MATRIX.md
marketing/: 01-tagline-elevator-pitch.md  02-readme-landing-page.md  03-social-media-posts.md  04-feature-one-pager.md
scripts/: setup-direwolf-mac.sh  setup-direwolf-pi.sh  test-aprs-is-transport.py  test-aprs-is.py  test-ble-send.py  test-mobilinkd-ble.py  test-mobilinkd-usb.py  test-mobilinkd.py  test-uvpro-ble-send.py  test-uvpro-serial.py
tests/: conftest.py
(+42 files in other folders)
