[project]
name = "aprs-tui"
version = "0.1.0"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "serial: marks tests requiring serial hardware",
    "bluetooth: marks tests requiring bluetooth hardware",
]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = [".agents", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM"]

[tool.coverage.run]
source = ["aprs_tui"]
omit = [
    "tests/*",
    "aprs_tui/__main__.py",
    "aprs_tui/app.py",
    "aprs_tui/ui/*",
    "aprs_tui/transport/kiss_ble.py",
    "aprs_tui/transport/kiss_serial.py",
    "aprs_tui/core/direwolf.py",
    "aprs_tui/discovery/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
